plugins {
    id 'org.springframework.boot' version '2.6.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'com.avast.gradle.docker-compose' version '0.14.9'
    id 'org.flywaydb.flyway' version '8.0.5'
    id 'checkstyle'
    id 'org.sonarqube' version '3.3'
    id 'jacoco'
}

group = 'com.madjaye'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

flyway {
    configFiles = ['flyway.conf']
}

checkstyle {
    toolVersion = '8.45'
}

dependencies {
    // spring boot starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.projectlombok:lombok:1.18.18'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'

    implementation platform('org.testcontainers:testcontainers-bom:1.16.2') //import bom
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'
}

test {
    useJUnitPlatform()
}

tasks.register('copyLibs', Copy) {
    from layout.buildDirectory.dir('libs/investment-tracker-0.0.1-SNAPSHOT.jar')
    into layout.projectDirectory.dir('src/main/docker')
}

task deployLocal(dependsOn: ['clean', 'bootJar', 'copyLibs', 'composeUp']) {
    group 'deploy'
    description 'Builds app as a jar, dockerizes app and then composes up'
    tasks.findByName('bootJar').mustRunAfter 'clean'
    tasks.findByName('copyLibs').mustRunAfter 'bootJar'
    tasks.findByName('composeUp').mustRunAfter 'copyLibs'
}

sonarqube {
    properties {
        property 'sonar.host.url', 'http://localhost:9000'
    }
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}
test.finalizedBy jacocoTestReport

tasks.named('sonarqube').configure {
    dependsOn test
}
